@@ -1,2 +1,9 @@
 # ForgeModRemapper
 Just easy to use mods remapper.
+
+You need java 12 to use this application, and --enable-preview jvm argument.
+E.g. java --enable-preview -jar ForgeModRemapper.jar
+
+# Release
+
+Will be added soon.
